[package]
name = "brain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.37", features = ["json", "lazy"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] } 